syntax = "proto3";

message Attack
{
		int32 protoId = 1101;
  int32 id = 1;
  int32 targetId = 2;
}